# llvm-examples

./: .gitattributes  .gitignore  BUILD.md  README.md  RESOURCES.md  setenv.bat  setenv.sh
docs/: 2002-08-09-LLVMCompilationStrategy.txt  2002-12-LattnerMSThesis.txt  2015_1405.4565.txt  2016_VMIL_Efficient_Execution_of_LLVM_IR_on_Truffle.txt  2018_Rigger_Safe_and_Efficient_Execution_of LLVM_based_Languages.txt  2024_First_Steps_towards_Deductive_Verification_of_LLVM_IR.txt  TutorialLLVMBackendCpu0.txt  llvm.txt
examples/: Makefile.inc  README.md
examples/JITTutorial1/: 00download.txt  CMakeLists.txt  Makefile  build.bat  build.sh
examples/JITTutorial1/src/: tut1.cpp
examples/JITTutorial1_main/: CMakeLists.txt  Doxyfile  Makefile  build.bat
examples/JITTutorial1_main/src/: main.cpp  tut1.cpp  tut1.h  tut1_main.cpp
examples/JITTutorial2/: 00download.txt  CMakeLists.txt  Doxyfile  Makefile  build.bat
examples/JITTutorial2/src/: tut2.cpp
examples/JITTutorial2_main/: CMakeLists.txt  Doxyfile  build.bat
examples/JITTutorial2_main/src/: main.cpp  tut2.cpp  tut2.h  tut2_main.cpp  tut2_utils.cpp  tut2_utils.h  utils.cpp  utils.h
examples/hello/: CMakeLists.txt  Doxyfile  Makefile  build.bat
examples/hello/src/main/c/: hello.c
examples/hello/src/main/cpp/: hello.cpp
examples/llvm-hello/: .gitignore  00download.txt  CMakeLists.txt  Doxyfile  Makefile  build.bat
examples/llvm-hello/src/main/cpp/: main.cpp
llvm-essentials/: Makefile.inc  README.md
llvm-essentials/1_2_Getting_familiar_with_LLVM_IR/: Makefile  build.bat
llvm-essentials/1_2_Getting_familiar_with_LLVM_IR/src/: add.c
llvm-essentials/3_2_Getting_address_of_element/: build.bat
llvm-essentials/3_2_Getting_address_of_element/src/: toy.cpp
llvm-essentials/3_3_Reading_from_memory/: CMakeLists.txt
llvm-essentials/3_3_Reading_from_memory/src/: toy.cpp
llvm-essentials/3_4_Writing_to_memory/: build.bat
llvm-essentials/3_4_Writing_to_memory/src/: toy.cpp
llvm-essentials/3_5_Inserting_a_scalar_into_a_vector/: build.bat
llvm-essentials/3_5_Inserting_a_scalar_into_a_vector/src/: toy.cpp
llvm-essentials/3_6_Extracting_a_scalar_from_a_vector/: build.bat
llvm-essentials/3_6_Extracting_a_scalar_from_a_vector/src/: toy.cpp
llvm-essentials/5_1_Loop_processing/: build.bat
llvm-essentials/5_1_Loop_processing/src/: toy.cpp
llvm-essentials/5_2_Scalar_evolution/: CMakeLists.txt  build.bat
llvm-essentials/5_2_Scalar_evolution/src/: scalevl.cpp
